--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "npm-run-all lint:* test:*",
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each",
-    "prepublishOnly": "ember ts:precompile",
+    "prepare": "ember ts:precompile",
     "postpublish": "ember ts:clean"
   },
   "dependencies": {
